--- a/snippets/multi-brand-header.liquid
+++ b/snippets/multi-brand-header.liquid
@@ -1,20 +1,54 @@
 {% comment %} 
-TODO: Here is where we'll add the new row 
-- logos will go into the svg, the text content is just a placeholder
-         
 TODO: will need to find out how this particular theme is hiding the announcement bar and
-TODO: make this code it's own section 
+TODO: Need to figure out how to style. I guess we're managing this by the SUFFIX in the URL handle
+TODO: will need to pass down template to this snippet
+TODO: we will also need white versions of the logos to go on the colored backgrounds.
+TODO: pass down: 
+  - desktop and mobile logo for EACH header template
+
+  ADD SETTINGS AND PASS DOWN:
+  - the colors for active 
+  - the background color of the brand-header
+  - 
+
+
+- if 
 {% endcomment %}
+
+
+<style>
+  /* 
+  - BOTH list-item AND active to avoid collisions
+  - needs to be the brand colors, we should NOT hardcode these!
+  */
+.brand-header--list-item.ww-active {
+  background-color: #5E6939;
+  color: white;
+}
+
+.brand-header--list-item.ss-active {
+  background-color: #5BB0E2;
+  color: white;
+}
+
+</style>
+
+<script>
+  console.log("{{ brand | json}}:", {{ brand | json}});
+</script>
+
+
+
 <section class="brand-header--wrapper">
   <span class="brand-header--nav-list">
-    <a class="brand-header--list-item" href="/">
+<a class="brand-header--list-item {% unless brand contains 'skin-salvation'%}ww-active{% endunless %}" href="/" >
       <img
         alt="With & Within Brand Logo"
         src="https://cdn.shopify.com/s/files/1/0401/2645/files/w_w_logo_green_1_358f76d3-b94a-411e-a99f-d14883471e22.png?v=1687830009"
         height="80%"
         width="auto" />
     </a>
-    <a class="brand-header--list-item" href="/pages/contact">
+    <a class="brand-header--list-item {% if brand contains 'skin-salvation'%}ss-active{% endif %}" href="/pages/contact">
       <img
         alt="Skin Salvation Brand Logo"
         src="https://cdn.shopify.com/s/files/1/0401/2645/files/logo-bird-ss.svg?v=1676480189"
