--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -165,6 +165,11 @@
       {% assign brand = '' %}
     {% endif %}
 
+    <script>
+      console.log("brand | json:", {{ brand | json}} );
+    </script>
+
+
     {% render 'css-variables', brand: brand %}
     {% render 'critical-css' %}
     {% render 'style-tags' %}
