Did what I could before work today. Going to do what I can while there before I get busier in the evening.

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -780,21 +780,9 @@
 
       {
 
-         "type": "select",
-
-         "id": "color_combination",
-
-         "label": "Combination",
-
-         "options": [
-
-            { "value": "primary", "label": "Primary"},
-
-            { "value": "secondary", "label": "Secondary"},
-
-            { "value": "tertiary", "label": "Tertiary"}
-
-         ]
+         "type": "color",
+         "id": "footer-color",
+         "label": "Background Color"
 
       }
 
