--- a/sections/footer-skin-salvation.liquid
+++ b/sections/footer-skin-salvation.liquid
@@ -777,25 +777,10 @@
         "content":   "Color"
 
       },
-
-      {
-
-         "type": "select",
-
-         "id": "color_combination",
-
-         "label": "Combination",
-
-         "options": [
-
-            { "value": "primary", "label": "Primary"},
-
-            { "value": "secondary", "label": "Secondary"},
-
-            { "value": "tertiary", "label": "Tertiary"}
-
-         ]
-
+     {
+         "type": "color",
+         "id": "footer-color",
+         "label": "Background Color"
       }
 
     ],
