--- a/snippets/multi-brand-header.liquid
+++ b/snippets/multi-brand-header.liquid
@@ -15,43 +15,38 @@ TODO: pass down:
 - if 
 {% endcomment %}
 
+<script>
+  console.log('color:', {{ color | json }})
+  console.log('brand:', {{ brand | json }})
+   console.log('img 1:', {{ brand | json }})
+    console.log('img 2:', {{ brand | json }})
+</script>
 
 <style>
-  /* 
-  - BOTH list-item AND active to avoid collisions
-  - needs to be the brand colors, we should NOT hardcode these!
-  */
-.brand-header--list-item.ww-active {
-  background-color: #5E6939;
-  color: white;
-}
+  .active-brand {
+    background-color: {{ color }};
+  }
 
-.brand-header--list-item.ss-active {
-  background-color: #5BB0E2;
-  color: white;
-}
+  .brand-header--list-item {
+    color: white;
+    height: 100%;
+  }
 
 </style>
 
-<script>
-  console.log("{{ brand | json}}:", {{ brand | json}});
-</script>
-
-
-
 <section class="brand-header--wrapper">
   <span class="brand-header--nav-list">
-<a class="brand-header--list-item {% unless brand contains 'skin-salvation'%}ww-active{% endunless %}" href="/" >
+    <a class="brand-header--list-item {% if brand == 'with-and-within' %}active-brand{% endif %}" href="/">
       <img
         alt="With & Within Brand Logo"
-        src="https://cdn.shopify.com/s/files/1/0401/2645/files/w_w_logo_green_1_358f76d3-b94a-411e-a99f-d14883471e22.png?v=1687830009"
+        src="{{ settings.brand-logo-1 | image_url }}"
         height="80%"
         width="auto" />
     </a>
-    <a class="brand-header--list-item {% if brand contains 'skin-salvation'%}ss-active{% endif %}" href="/pages/contact">
+    <a class="brand-header--list-item {% if brand == 'skin-salvation' %}active-brand{% endif %}" href="/pages/skinsalvation">
       <img
         alt="Skin Salvation Brand Logo"
-        src="https://cdn.shopify.com/s/files/1/0401/2645/files/logo-bird-ss.svg?v=1676480189"
+        src="{{ settings.brand-logo-2 | image_url }}"
         height="80%"
         width="auto" />
     </a>
