--- a/sections/header-skin-salvation.liquid
+++ b/sections/header-skin-salvation.liquid
@@ -87,12 +87,17 @@
  - passing suffix down to the multi-brand header
  - if template.suffix is nil, ie. NO suffix, the default is 'with-and-within'
 {% endcomment %}
-    {% assign brand = template.suffix | default: 'with-and-within' %}
 
-  {% if brand == 'with-and-within' %}
-    {% assign color = section.settings.brand-color-1 %}
-  {% elsif brand == 'skin-salvation' %}
-    {% assign color = section.settings.brand-color-2 %}
+ {% if template.suffix == 'skin-salvation' %}
+    {% assign brand = 'skin-salvation' %}
+{% else %}
+    {% assign brand = 'with-and-within' %}
+{% endif %}
+
+ {% if brand == 'skin-salvation' %}
+       {% assign color = section.settings.brand-color-2 %}
+    {% else %}
+      {% assign color = section.settings.brand-color-1 %}
   {% endif %}
     
 {% comment %}
@@ -100,6 +105,7 @@
   - TODO: could probably optimize by referring to brands by an id versus a hardcoded name
 {% endcomment %}
      {% render 'multi-brand-header', brand: brand, color: color, settings: section.settings %}
+
 
       <div class="max-site-width px2 lg--up--px3">
         <div class="relative">
@@ -206,7 +212,7 @@
             {% else %}
               <div class="header__logo lg--header__logo {% unless section.settings.logo != blank %}h1{% else %}font-size--0{% endunless %} m0  lg--up--px3 md--dn--px1">
             {% endif %}
-                <a href="{{ routes.root_url }}" class="font-size--xl line-height--4 color--{{ section_color }}-text color--header-active f--heading site-logo mx--auto{% if section.settings.logo != blank %} site-header__logo-image{% endif %}">
+                <a href="https://skinsalvation.janeapp.com/login" class="font-size--xl line-height--4 color--{{ section_color }}-text color--header-active f--heading site-logo mx--auto{% if section.settings.logo != blank %} site-header__logo-image{% endif %}">
                   {% if section.settings.logo != blank or section.settings.logo_svg != blank %}
 
                     {% if section.settings.logo_svg != blank %}
