--- a/snippets/multi-brand-header.liquid
+++ b/snippets/multi-brand-header.liquid
@@ -1,18 +1,18 @@
 {% comment %} 
-TODO: will need to find out how this particular theme is hiding the announcement bar and
-TODO: Need to figure out how to style. I guess we're managing this by the SUFFIX in the URL handle
-TODO: will need to pass down template to this snippet
-TODO: we will also need white versions of the logos to go on the colored backgrounds.
-TODO: pass down: 
-  - desktop and mobile logo for EACH header template
-
-  ADD SETTINGS AND PASS DOWN:
-  - the colors for active 
-  - the background color of the brand-header
-  - 
-
-
-- if 
+                    TODO: will need to find out how this particular theme is hiding the announcement bar and
+                    TODO: Need to figure out how to style. I guess we're managing this by the SUFFIX in the URL handle
+                    TODO: will need to pass down template to this snippet
+                    TODO: we will also need white versions of the logos to go on the colored backgrounds.
+                    TODO: pass down: 
+                      - desktop and mobile logo for EACH header template
+                    
+                      ADD SETTINGS AND PASS DOWN:
+                      - the colors for active 
+                      - the background color of the brand-header
+                      - 
+                    
+                    
+                    - if 
 {% endcomment %}
 
 <script>
@@ -32,12 +32,17 @@ TODO: pass down:
     height: 100%;
   }
 
+  /* TODO: Just to make the logo white. A modded SVG would be best though */
+  .with-within-filter {
+    filter: brightness(1000%);
+  }
 </style>
 
 <section class="brand-header--wrapper">
   <span class="brand-header--nav-list">
     <a class="brand-header--list-item {% if brand == 'with-and-within' %}active-brand{% endif %}" href="/">
       <img
+        class="{% if brand == 'with-and-within' %}with-within-filter{% endif %}"
         alt="With & Within Brand Logo"
         src="{{ settings.brand-logo-1 | image_url }}"
         height="80%"
