--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -135,10 +135,10 @@
             <div class="announcement-bar {{ class }}" style="background-color: {{ color }};">
           {% else %}
             <a href="{{ section.settings.link }}" 
-            style="background-color: {{ color }};"
+             style="background-color: {{ color }};"
             class="announcement-bar announcement-bar--link {{ class }}">
           {% endif %}
-            <p class="m0 announcement-bar__message">{{ section.settings.text | escape }}</p>
+            <p style="color: {{section.settings.text-color}};" class="m0 announcement-bar__message">{{ section.settings.text | escape }}</p>
           {% if section.settings.link == blank %}
             </div>
           {% else %}
@@ -937,6 +937,11 @@ elements.forEach(function(element) {
         "type": "header",
         "content": "Multi-Brand Header"
       },
+       {
+        "type": "color",
+        "id": "background-color",
+        "label": "Background Color"
+      },
         {
         "type": "image_picker",
         "id": "brand-logo-1",
@@ -961,6 +966,11 @@ elements.forEach(function(element) {
         "type": "header",
         "content": "Announcement bar",
         "info": "Color is determined by the ACTIVE brand"
+      },
+        {
+        "type": "color",
+        "label": "Text Color",
+        "id": "text-color"
       },
       {
         "type": "checkbox",
