--- a/sections/modular-richtext.liquid
+++ b/sections/modular-richtext.liquid
@@ -214,6 +214,7 @@
   "presets": [
     {
       "name": "Modular Rich Text",
+      "category": "Text",
       "blocks": [
         {
           "type": "heading"
